# EUBathingWaterAPI

./: .gitignore  .markdownlint.json  ZwemwaterAPI.code-workspace  init_db.py  license.md  locations.geojson  locs.geojson  main.py  readme.md  requirements.txt
.github/workflows/: codeql.yml
Data/: ImportZwemwaterNL.py  data.db
Models/: Area.py  Response.py
Models/ZwemwaterNL/: Tests.py
Sources/: Marineterrein.py  ZwemwaterNL.py
archive/: main.py  pyproject.toml
archive/models/: Response.py  WaterQuality.py
archive/models/ZwemwaterNL/: Advice.py
archive/sources/: ZwemwaterNL.py
data/: IE-DataDotGov.ipynb  InitDB.ipynb  Marineterrein.ipynb  NL-Marineterrein.ipynb  NL-MeetnetWater.ipynb  NL-ZwemwaterNL-Coordinates.ipynb  NL-ZwemwaterNL.ipynb  ZwemwaterNL.ipynb  dataset.sqlite3  generate_geojson.py  init_db.py
data/austria/: A-Badegewaesser.ipynb
data/belgium/: BE-Vlaanderen.ipynb  BE-Wallonie.ipynb  vlaanderen.csv
data/countries/: dataset.sqlite3  generate_geojson.py
data/germany/: DE-Hamburg.ipynb  DE-NRW.ipynb  DE-SWH.ipynb
data/ireland/: IE-Beaches.ipynb  IE-DataDotGov.ipynb  ireland.csv
data/luxemburg/: Luxembourg-Geoportail.ipynb
data/netherlands/: NL-Datamodel.ipynb  NL-Marineterrein.ipynb  NL-MeetnetWater.ipynb  NL-Sloterplas.ipynb  NL-ZwemwaterNL-Coordinates.ipynb  NL-ZwemwaterNL.ipynb  NL-marineterrein.csv  locations.csv  output.json
data/output/: NL-marineterrein.csv  NL-zwemwater.csv
data/poland/: pl.ipynb
docs/: zwemwaternl.ipynb
webapp/: index.html  map.js  mapstyle.json  script.js  search.js  style.css
(+42 files in other folders)
